Fix margin and font bug so that everything is the proper size and spacing

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -10,6 +10,7 @@ body {
   justify-content: center;
   margin: 0 10%;
   align-items: center;
+  font-weight: 300;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
