--- a/client/src/components/Impact/Impact.css
+++ b/client/src/components/Impact/Impact.css
@@ -44,12 +44,6 @@
       right: -37%;
       top: -50px; }
 
-.fake-circle {
-  border-radius: 100%;
-  background-color: purple;
-  height: 200px;
-  width: 200px; }
-
 .question-cont {
   position: relative; }
 
@@ -157,7 +151,7 @@
   .economic-article .graph-cover {
     height: 470px;
     width: 100%;
-    background-color: green;
+    background-color: #fff;
     border-top: 2px solid black;
     z-index: 1; }
   .economic-article .econ-graph-wrap {
